add read only call sc endpoint
