# int/api/cmd/read_only.go
@@ -1,0 +1,78 @@
+package cmd
+
+import (
+	"encoding/base64"
+
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/massalabs/station/api/swagger/server/models"
+	"github.com/massalabs/station/api/swagger/server/restapi/operations"
+	"github.com/massalabs/station/int/config"
+	"github.com/massalabs/station/pkg/node"
+	sendOperation "github.com/massalabs/station/pkg/node/sendoperation"
+	"github.com/massalabs/station/pkg/wallet"
+)
+
+func NewReadOnlyCallSCHandler(config *config.NetworkInfos) operations.CmdReadOnlyCallSCHandler {
+	return &ReadOnlyCallSC{networkInfos: config}
+}
+
+type ReadOnlyCallSC struct {
+	networkInfos *config.NetworkInfos
+}
+
+func (e *ReadOnlyCallSC) Handle(params operations.CmdReadOnlyCallSCParams) middleware.Responder {
+	args, err := base64.StdEncoding.DecodeString(params.Body.Args)
+	if err != nil {
+		return operations.NewCmdReadOnlyCallSCUnprocessableEntity().
+			WithPayload(
+				&models.Error{
+					Code:    errorInvalidArgs,
+					Message: err.Error(),
+				})
+	}
+
+	acc, err := wallet.Fetch(params.Body.Nickname)
+	if err != nil {
+		return operations.NewCmdReadOnlyCallSCBadRequest().WithPayload(
+			&models.Error{
+				Code:    errorInvalidNickname,
+				Message: "Error during wallet fetch: " + err.Error(),
+			})
+	}
+
+	if params.Body.Fee == "" {
+		params.Body.Fee = "0"
+	}
+
+	coins, errResponse := amountToUint64(params.Body.Coins, uint64(sendOperation.DefaultFee))
+	if errResponse != nil {
+		return errResponse
+	}
+
+	coinsString, err := sendOperation.NanoToMas(coins)
+	if err != nil {
+		return operations.NewCmdReadOnlyCallSCBadRequest().WithPayload(
+			&models.Error{
+				Code:    errorInvalidFee,
+				Message: "Error during coins amount conversion: " + err.Error(),
+			})
+	}
+
+	result, err := sendOperation.ReadOnlyCallSC(
+		params.Body.At,
+		params.Body.Name,
+		args,
+		coinsString,
+		string(params.Body.Fee),
+		acc.Address,
+		node.NewClient(e.networkInfos.NodeURL),
+	)
+	if err != nil {
+		return operations.NewCmdReadOnlyCallSCInternalServerError().WithPayload(
+			&models.Error{Code: errorSendOperation, Message: "Error: read only callSC failed: " + err.Error()})
+	}
+
+	modelResult := CreateReadOnlyResult(*result)
+
+	return operations.NewCmdReadOnlyCallSCOK().WithPayload(&modelResult)
+}
